---
source: tests/insta_test.rs
expression: tester.program().as_ref().unwrap()
---
Program {
    components: [
        ProgramComponent {
            kind: FuncDef(
                Int,
                Declarator {
                    n_star: 0,
                    direct_declarator: Func(
                        Ident(
                            "main",
                        ),
                        [],
                        true,
                    ),
                },
                Stmt {
                    kind: Block(
                        [
                            Stmt {
                                kind: Declare(
                                    Declaration {
                                        declaration_specifiers: [
                                            Type(
                                                Int,
                                            ),
                                        ],
                                        init_declarator: Some(
                                            InitDeclarator {
                                                declarator: Declarator {
                                                    n_star: 0,
                                                    direct_declarator: Ident(
                                                        "a",
                                                    ),
                                                },
                                                initializer: Some(
                                                    Expr(
                                                        Expr {
                                                            kind: Num(
                                                                5,
                                                            ),
                                                            debug_info: DebugInfo {
                                                                file_info: FileInfo {
                                                                    file_name: "not impl name.c",
                                                                    src: "int main() {int a = 5; int *p = &a; return 0;}",
                                                                },
                                                                pos: Position {
                                                                    n_char: 20,
                                                                    n_line: 0,
                                                                },
                                                            },
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        debug_info: DebugInfo {
                                            file_info: FileInfo {
                                                file_name: "not impl name.c",
                                                src: "int main() {int a = 5; int *p = &a; return 0;}",
                                            },
                                            pos: Position {
                                                n_char: 12,
                                                n_line: 0,
                                            },
                                        },
                                    },
                                ),
                            },
                            Stmt {
                                kind: Declare(
                                    Declaration {
                                        declaration_specifiers: [
                                            Type(
                                                Int,
                                            ),
                                        ],
                                        init_declarator: Some(
                                            InitDeclarator {
                                                declarator: Declarator {
                                                    n_star: 1,
                                                    direct_declarator: Ident(
                                                        "p",
                                                    ),
                                                },
                                                initializer: Some(
                                                    Expr(
                                                        Expr {
                                                            kind: Addr(
                                                                Expr {
                                                                    kind: Ident(
                                                                        "a",
                                                                    ),
                                                                    debug_info: DebugInfo {
                                                                        file_info: FileInfo {
                                                                            file_name: "not impl name.c",
                                                                            src: "int main() {int a = 5; int *p = &a; return 0;}",
                                                                        },
                                                                        pos: Position {
                                                                            n_char: 33,
                                                                            n_line: 0,
                                                                        },
                                                                    },
                                                                },
                                                            ),
                                                            debug_info: DebugInfo {
                                                                file_info: FileInfo {
                                                                    file_name: "not impl name.c",
                                                                    src: "int main() {int a = 5; int *p = &a; return 0;}",
                                                                },
                                                                pos: Position {
                                                                    n_char: 32,
                                                                    n_line: 0,
                                                                },
                                                            },
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        debug_info: DebugInfo {
                                            file_info: FileInfo {
                                                file_name: "not impl name.c",
                                                src: "int main() {int a = 5; int *p = &a; return 0;}",
                                            },
                                            pos: Position {
                                                n_char: 23,
                                                n_line: 0,
                                            },
                                        },
                                    },
                                ),
                            },
                            Stmt {
                                kind: Return(
                                    Some(
                                        Expr {
                                            kind: Num(
                                                0,
                                            ),
                                            debug_info: DebugInfo {
                                                file_info: FileInfo {
                                                    file_name: "not impl name.c",
                                                    src: "int main() {int a = 5; int *p = &a; return 0;}",
                                                },
                                                pos: Position {
                                                    n_char: 43,
                                                    n_line: 0,
                                                },
                                            },
                                        },
                                    ),
                                ),
                            },
                        ],
                    ),
                },
            ),
            debug_info: DebugInfo {
                file_info: FileInfo {
                    file_name: "not impl name.c",
                    src: "int main() {int a = 5; int *p = &a; return 0;}",
                },
                pos: Position {
                    n_char: 0,
                    n_line: 0,
                },
            },
        },
    ],
}
